antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__chat_composer__tests__footer_mode_ctrl_c_interrupt.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
" ┃ Ask Antex to do anything                                                                         "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
"                                                                                                    "
"  ctrl + c again to quit                                                                            "
