antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__chat_composer__tests__footer_mode_esc_hint_backtrack.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
" ┃ Ask Antex to do anything                                                                         "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
" ┃                                                                                                  "
"                                                                                                    "
"  esc again to edit previous message                                                                "
